@@ -2,6 +2,7 @@ package com.baidu.android.pushservice.f;
 
 import android.os.Build;
 import android.text.TextUtils;
+import com.baidu.ar.util.Constants;
 import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -19,8 +20,6 @@ import java.util.Map;
 import java.util.zip.GZIPInputStream;
 import javax.net.ssl.HttpsURLConnection;
 import org.apache.http.client.methods.HttpDelete;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.methods.HttpPut;
 import org.apache.http.protocol.HTTP;
 /* loaded from: classes2.dex */
@@ -120,9 +119,9 @@ public class b {
                 stringBuffer.append(key).append("=");
                 String value = next.getValue();
                 if (TextUtils.isEmpty(value)) {
-                    stringBuffer.append(URLEncoder.encode("", HTTP.UTF_8));
+                    stringBuffer.append(URLEncoder.encode("", "UTF-8"));
                 } else {
-                    stringBuffer.append(URLEncoder.encode(value, HTTP.UTF_8));
+                    stringBuffer.append(URLEncoder.encode(value, "UTF-8"));
                 }
             }
             i = i2 + 1;
@@ -135,13 +134,13 @@ public class b {
             try {
                 httpURLConnection.setConnectTimeout(30000);
                 httpURLConnection.setReadTimeout(30000);
-                if (HttpPost.METHOD_NAME.equals(str2) || HttpPut.METHOD_NAME.equals(str2)) {
+                if ("POST".equals(str2) || HttpPut.METHOD_NAME.equals(str2)) {
                     httpURLConnection.setDoOutput(true);
                     httpURLConnection.setDoInput(true);
                     httpURLConnection.setUseCaches(false);
                 } else if (HttpDelete.METHOD_NAME.equals(str2)) {
                     httpURLConnection.setDoOutput(true);
-                } else if (HttpGet.METHOD_NAME.equals(str2)) {
+                } else if ("GET".equals(str2)) {
                     httpURLConnection.setDoOutput(false);
                 }
                 httpURLConnection.setRequestMethod(str2);
@@ -163,7 +162,7 @@ public class b {
     }
 
     private static void a(String str, HashMap<String, String> hashMap, HttpURLConnection httpURLConnection) throws IOException {
-        if ((HttpPost.METHOD_NAME.equals(str) || HttpPut.METHOD_NAME.equals(str) || HttpDelete.METHOD_NAME.equals(str)) && !a(httpURLConnection, hashMap)) {
+        if (("POST".equals(str) || HttpPut.METHOD_NAME.equals(str) || HttpDelete.METHOD_NAME.equals(str)) && !a(httpURLConnection, hashMap)) {
             throw new IOException("failed to writeRequestParams");
         }
     }
@@ -206,7 +205,7 @@ public class b {
                 dataOutputStream = null;
             }
             try {
-                dataOutputStream.write(a(hashMap).getBytes(HTTP.UTF_8));
+                dataOutputStream.write(a(hashMap).getBytes("UTF-8"));
                 dataOutputStream.flush();
                 a(dataOutputStream, outputStream);
                 return z;
@@ -252,6 +251,6 @@ public class b {
 
     private static boolean b(HttpURLConnection httpURLConnection) {
         String headerField = httpURLConnection.getHeaderField(HTTP.CONTENT_ENCODING);
-        return !TextUtils.isEmpty(headerField) && headerField.contains("zip");
+        return !TextUtils.isEmpty(headerField) && headerField.contains(Constants.ZIP_SUFFIX);
     }
 }
