@@ -6,6 +6,7 @@ import android.os.Build;
 import android.text.TextUtils;
 import com.baidu.android.common.security.MD5Util;
 import com.baidu.android.common.util.DeviceId;
+import com.baidu.ar.util.Constants;
 import com.baidu.sapi2.base.debug.Log;
 import java.io.FileInputStream;
 import java.net.NetworkInterface;
@@ -14,7 +15,6 @@ import java.util.Collections;
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import org.apache.http.protocol.HTTP;
 /* loaded from: classes.dex */
 public class SapiDeviceUtils {
     static String a = "js52je)927!hsm^%3m";
@@ -125,7 +125,7 @@ public class SapiDeviceUtils {
 
     public static String getOSVersion() {
         try {
-            return URLEncoder.encode(TextUtils.isEmpty(Build.VERSION.RELEASE) ? "" : Build.VERSION.RELEASE, HTTP.UTF_8);
+            return URLEncoder.encode(TextUtils.isEmpty(Build.VERSION.RELEASE) ? "" : Build.VERSION.RELEASE, "UTF-8");
         } catch (Exception e) {
             return "";
         }
@@ -133,7 +133,7 @@ public class SapiDeviceUtils {
 
     public static String getBrandName() {
         try {
-            return URLEncoder.encode(TextUtils.isEmpty(Build.BRAND) ? "" : Build.BRAND, HTTP.UTF_8);
+            return URLEncoder.encode(TextUtils.isEmpty(Build.BRAND) ? "" : Build.BRAND, "UTF-8");
         } catch (Exception e) {
             return "";
         }
@@ -141,7 +141,7 @@ public class SapiDeviceUtils {
 
     public static String getBrandMode() {
         try {
-            return URLEncoder.encode(TextUtils.isEmpty(Build.MODEL) ? "" : Build.MODEL, HTTP.UTF_8);
+            return URLEncoder.encode(TextUtils.isEmpty(Build.MODEL) ? "" : Build.MODEL, "UTF-8");
         } catch (Exception e) {
             return "";
         }
@@ -208,7 +208,7 @@ public class SapiDeviceUtils {
             String str2 = SapiDeviceUtils.a;
             try {
                 String base64Encode = base64Encode(str.getBytes("UTF-8"));
-                return encryptAes128(base64Encode + "." + MD5Util.toMd5((base64Encode + str2).getBytes(), false), str2);
+                return encryptAes128(base64Encode + Constants.DOT + MD5Util.toMd5((base64Encode + str2).getBytes(), false), str2);
             } catch (Exception e2) {
                 Log.e(Log.TAG, e2.toString());
                 return null;
